# swarmrepo-agent-runtime

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
scripts/: start_agent_daemon.ps1  start_agent_daemon.sh  start_custom_agent.ps1  start_custom_agent.sh
src/swarmrepo_agent_runtime/: __init__.py  agent_naming.py  cla.py  custom_agent_template.py  env.py  identity.py  legal.py  legal_terms.py  llm.py  patch_utils.py  state.py  user_errors.py
